WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147351
[iOS] REGRESSION (
r187376
): Form editing buttons are missing from the Shortcut Bar
https://bugs.webkit.org/show_bug.cgi?id=147351
Summary
[iOS] REGRESSION (r187376): Form editing buttons are missing from the Shortcu...
mitz
Reported
2015-07-27 20:04:00 PDT
<
rdar://problem/22023691
> After <
http://trac.webkit.org/r187376
>, when focusing a form field, the previous/next button and the optional AutoFill button are missing from the Shortcut Bar. Patch forthcoming.
Attachments
Ensure that _formAccessoryView gets initialized when needed even if -inputAccessoryView is always nil
(3.70 KB, patch)
2015-07-27 20:31 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2015-07-27 20:31:31 PDT
Created
attachment 257630
[details]
Ensure that _formAccessoryView gets initialized when needed even if -inputAccessoryView is always nil
WebKit Commit Bot
Comment 2
2015-07-27 21:36:55 PDT
Comment on
attachment 257630
[details]
Ensure that _formAccessoryView gets initialized when needed even if -inputAccessoryView is always nil Clearing flags on attachment: 257630 Committed
r187481
: <
http://trac.webkit.org/changeset/187481
>
WebKit Commit Bot
Comment 3
2015-07-27 21:36:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug