[iOS] REGRESSION (r187376): Form editing buttons are missing from the Shortcut Bar https://bugs.webkit.org/show_bug.cgi?id=147351

Reviewed by Adele Peterson.

We were relying on -[WKContentView inputAccessoryView] getting called to initialize the form
accessory view, even when that method would always return nil, as it does on iPad. After
r187376, that method changed to initializing the view only when returning it, which caused
this bug.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _displayFormNodeInputView]): Call the new -_ensureFormAccessoryView from
here, when we are going to need the view.
(-[WKContentView _ensureFormAccessoryView]): Moved initialization code from
-inputAccessoryView here, and removed outdated +instancesRespondToSelector: check.
(-[WKContentView inputAccessoryView]): Now calls through -formAccessoryView.
(-[WKContentView formAccessoryView]): Added call to -_ensureFormAccessoryView here.


Canonical link: https://commits.webkit.org/165438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187481 268f45cc-cd09-0410-ab3c-d52691b4dbfc